<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
	android:gravity="center">

	<TextView
		android:layout_marginBottom="48dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="20pt"/>

	<Button android:id="@+id/mixButton"
			android:layout_marginBottom="24dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/mix_button"
		android:textSize="12pt"/>
	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="16dp">
		<Button android:id="@+id/getListViewButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/listview_button"
			style="?android:buttonBarStyle"/>
		<Button android:id="@+id/getGridViewButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/gridview_button"
				style="?android:buttonBarStyle"/>
	</LinearLayout>

	<TextView android:id="@+id/createDBTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<ProgressBar android:id="@+id/createDBProgressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</LinearLayout>